examples/failing/http-server.cz
# Example of how an http server might look
let app = net.http.server();
app.static("./public");
app.get("/foo", fn (req) {
    return { "status": 200, "body": "foo" };
});
app.get("/foo/:bar", fn (req) {
    return { "status": 200, "body": req["params"]["bar"] };
});
app.post("/baz", fn (req) {
    mutable res = "";
    mutable status = 201;
    if (!req["body"]) {
        status = 400;
        res = "Body required";
    }

    return { "status": status, "body": res };
});
app.listen(8000, fn () {
    print("App listening on", 8000);
});
